# Term-Project-ME-405

./: .readthedocs.yaml  BTComm.py  Encoder.py  LineSensor.py  Motor.py  README.rst  cotask.py  pyproject.toml
code/: BTComm.py  Encoder.py  GoatedPlotter.py  IMU.py  LineSensor.py  RomiDisplay.py  Talker.py
code/src/: Encoder.py  Motor.py  SSModel.py  ThePursuer.py  main.py  task_share.py
docs/: requirements.txt
docs/source/: api.rst  background.rst  conf.py  drivers.rst  drivingalgorithm.rst  gen_fsm_diagrams.py  generate_speed_law_svg.py  getting-started.rst  hardware.rst  helper-classes.rst  importantnotes.rst  index.rst  main-program.rst  overview.rst  pcui.rst  software.rst  ssmodel.rst  stm32-pins.rst
docs/source/_static/: zoom-graph.css  zoom-graph.js
me405/: BTComm.py  Encoder.py  IMU.py  LineSensor.py  Motor.py  PIController.py  RomiDisplay.py  SSModel.py  Talker.py  ThePursuer.py  __init__.py  cotask.py  main.py  task_share.py
