[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ME-405-Term-Project"
version = "0.1.0"
description = "Code and documentation for a differential drive robot to navigate an obstacle course."
authors = [{name = "Andrew Jones", email = "ajone168@calpoly.edu"}]

[tool.flit.module]
name = "code"
